--- a/src/App/Exercises/HtmlCss/Colors/styles.css
+++ b/src/App/Exercises/HtmlCss/Colors/styles.css
@@ -22,3 +22,13 @@
     color: hsl(0deg, 100%, 50%)
 }
 
+.opacity {
+    background-color: yellow;
+    padding: 20px;
+   opacity: 0.5;
+}
+.rgbaopacity {
+    background-color: rgb(0, 221, 255, 0.1);
+    padding: 20px;
+}
+
