--- a/src/App/Exercises/HtmlCss/Backgounds/styles.css
+++ b/src/App/Exercises/HtmlCss/Backgounds/styles.css
@@ -5,6 +5,9 @@
     background-size: cover;
     background-position: center center;
     background-repeat: repeat;
+    filter: saturate(651%);
+-webkit-filter: saturate(651%);
+-moz-filter: saturate(651%);
     
 }
 
