--- a/src/App/Blog/styles.css
+++ b/src/App/Blog/styles.css
@@ -7,6 +7,7 @@ font-style: normal;
 font-weight: 700;
 line-height: 34px; /* 188.889% */
 margin-right: 1094px;
+
 }
 
 .date {
@@ -20,7 +21,7 @@ margin-bottom: 0;
 }
 
 .wrapper1 {
-    display: inline-flex;
+    display: block;
     flex-direction: column;
     border: 8px;
     border-radius: 8px;
@@ -33,15 +34,13 @@ margin-bottom: 0;
    margin-top: 45px;
    margin-right: 61px;
    margin-bottom: 45px;
+   box-sizing: border-box;
 }
 
-.notificationIcon {
-    width: 35px;
-height: 35px;
-
-
-
+.notification {    
+float: right;
 }
+
 
 .wrapper {
     display: inline-flex;
@@ -138,4 +137,13 @@ ul {
 
 .blog > .wrapper {
     background: #23213D;
+}
+
+.hand {
+    width: 64.00000228832px;
+    height: 76.12764249245157px;
+    top: 1724.435546875px;
+    left: 1192px;
+float: right;
+
 }
